tests/baselines/reference/jsxFragmentFactoryNoUnusedLocals.errors.txt
jsxFragmentFactoryNoUnusedLocals.tsx(12,40): error TS7006: Parameter 'prev' implicitly has an 'any' type.


==== jsxFragmentFactoryNoUnusedLocals.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import { Fragment, createElement } from "react"
    
    type CounterProps = {
        count?: number
    }
    
    export function Counter({ count = 0 }: CounterProps) {
        const [cnt, setCnt] = null as any;
        return <>
            <p>{cnt}</p>
            <button onClick={() => setCnt((prev) => prev + 1)} type="button">Update</button>
                                           ~~~~
!!! error TS7006: Parameter 'prev' implicitly has an 'any' type.
        </>
    }